--- a/Mensajerapp/Mensajerapp.csproj
+++ b/Mensajerapp/Mensajerapp.csproj
@@ -154,6 +154,15 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Img\delivery_icon.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Img\ticket_icon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Img\conf_icon.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\System.Data.SQLite.Core.1.0.109.1\build\net46\System.Data.SQLite.Core.targets" Condition="Exists('..\packages\System.Data.SQLite.Core.1.0.109.1\build\net46\System.Data.SQLite.Core.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
