almost done but billing

--- a/Mensajerapp/Mensajerapp.csproj
+++ b/Mensajerapp/Mensajerapp.csproj
@@ -92,6 +92,25 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="cadetPay.xaml.cs">
+      <DependentUpon>cadetPay.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="stateConverter.cs" />
+    <Compile Include="tripListWindow.xaml.cs">
+      <DependentUpon>tripListWindow.xaml</DependentUpon>
+    </Compile>
+    <Page Include="cadetListWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="cadetPay.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="clientListWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -99,6 +118,12 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="cadetListWindow.xaml.cs">
+      <DependentUpon>cadetListWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="clientListWindow.xaml.cs">
+      <DependentUpon>clientListWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
@@ -113,6 +138,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="newTripWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="tripListWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
